# miriam

./: .clang-format  .dockerignore  .env  .gitignore  .gitmodules  .miriamrc  .pre-commit-config.yaml  .pylintrc  .travis.yml  1949350216875740899.pkl  221975381900190707.pkl  3263455656911449510.pkl  3810585823104790336.pkl  3833432258070881927.pkl  4304573881296625396.pkl  4419777348364035897.pkl  4554318313912746428.pkl  4633226044612359136.pkl  5419610983642443682.pkl  552894447389751294.pkl  571302441606676926.pkl  6018279121862257337.pkl  6438011496227342404.pkl  6634787175654352827.pkl  8288550903330881081.pkl  87db26b63164a5179f0bb7ffbf56f7045203ab45693a152063b221df8ad2270a_infile_to_annotate.yaml  8907122978414914474.pkl  9101502426059060484.pkl  Dockerfile  README.md  benchmark_tools.py  cloudsim.sublime-workspace  cobra  colission.pkl  complexity.py  conftest.py  cuda_util.py  debug.gpickle  debug.pt  definitions.py  (+17 more)
learn/boostpython/: CMakeLists.txt  README.md  astar.cpp  astar.py  astar_graph.cpp  astar_graph.py  build.bash  build.sh  hello.py  hello_ext.cpp  run_astar.bash  run_gdb.bash  run_hello.bash
logistics_relay/: CMakeLists.txt  package.xml
logistics_relay/launch/: logistics_relay.launch
logistics_relay/scripts/: relay.py
planner/astar_boost/: CMakeLists.txt  README.md  astar_graph.cpp  astar_graph_test.py  build.bash  converter.py  setup.bash
roadmaps/SPARS/: CMakeLists.txt  README.md
roadmaps/SPARS/examples/: config.yaml  roadmap.yaml  visualizeRoadmap.py
roadmaps/SPARS/src/: main.cpp  sparspy.cpp
roadmaps/adamsmap/: .gitignore  CMakeLists.txt  README.md  adamsmap.py  adamsmap.pyx  adamsmap_filename_verification.py  adamsmap_main.py  adamsmap_test.py  build.sh  c.odg  c_200_256.pkl  eval.py  eval_anim.py  eval_disc.py  eval_disc_test.py  eval_plot.py  eval_point.py  eval_write_anim_csv.py  eval_write_graph.py  learning_curves.py  main.py  o_200_1024.pkl.eval  package.xml  requirements.txt  setup.py  view.py  x.odg  x_200_2048.pkl  x_500_2048.pkl  z.odg  z_200_1024.pkl  z_200_2048.pkl  z_200_256.pkl  z_200_4096.pkl
roadmaps/adamsmap/anim/: animate.sh
roadmaps/adamsmap/res/: c_200_2048.pkl  c_500_2048.pkl  o_200_4096.pkl  o_500_2048.pkl  x_1000_2048.pkl  z_1000_4096.pkl.eval  z_200_1024.pkl  z_200_4096.pkl.eval  z_200_4096n_agents10_paths_typeev-our_n_trial0.csv  z_200_4096n_agents10_paths_typerandom_n_trial0.csv  z_200_4096n_agents10_paths_typeundirected_n_trial0.csv  z_200_4096n_agents20_paths_typeev-our_n_trial0.csv  z_200_4096n_agents20_paths_typerandom_n_trial0.csv  z_200_4096n_agents20_paths_typeundirected_n_trial0.csv  z_500_4096.pkl
roadmaps/adamsmap/script/: eval_anim.py  eval_disc.py  eval_disc_test.py  eval_point.py  eval_write_graph.py
roadmaps/adamsmap/src/adamsmap/: CMakeLists.txt  setup.py
roadmaps/adamsmap/test/: adamsmap_test.py
roadmaps/adamsmap_eval/: CMakeLists.txt  package.xml  setup.py  z_200_4096.eval_cen.pkl  z_200_4096.grid_adjlist.csv
roadmaps/adamsmap_eval/maps/: o.odg  x.odg
roadmaps/adamsmap_eval/res/: c_100_4096.pkl  o_100_4096.pkl  o_100_8000.pkl  o_200_1024.pkl  o_200_2048.pkl  o_200_4096.pkl  o_500_4096.pkl  x_100_4096.pkl  x_200_256.pkl  x_200_4096.graph_adjlist.csv  x_200_4096.graph_pos.csv  x_200_4096.pkl  x_500_4096.graph_adjlist.csv  z_100_1024.pkl  z_100_4096.pkl  z_200_1024.pkl.eval  z_200_4096.eval_cen.2d6fc270-dfd3-11e9-baaf-207918a17840.pkl  z_200_4096.eval_cen.43a61d14-df0b-11e9-baaf-207918a17840.pkl  z_200_4096.eval_cen.b2fdea58-dfd7-11e9-baaf-207918a17840.pkl  z_200_4096.eval_cen.ceca295a-dee6-11e9-baaf-207918a17840.pkl  z_200_4096.eval_cen.pkl  z_200_4096.eval_cen.pkl.computation_time.ps  z_200_4096.eval_cen.pkl.cost.ps  z_200_4096.eval_cen.pkl.successful.ps  z_200_4096.graph_adjlist.csv  z_200_4096.graph_undir_adjlist.csv  z_200_4096.grid_pos.csv  z_200_4096_old.pkl  z_200_4096n_agents10_paths_typeev-our_n_trial0.csv  z_200_4096n_agents10_paths_typerandom_n_trial0.csv  z_200_4096n_agents10_paths_typeundirected_n_trial0.csv
roadmaps/adamsmap_eval/script/: eval_centralized_pathfinding.py  eval_centralized_pathfinding_plot.py  eval_disc_main.py  eval_plot.py  eval_plot_comparison.py  eval_point.py  learning_curves.py  main.py  pickelizer.py  transform_pickle.py  write_graph.py
roadmaps/adamsmap_eval/src/adamsmap_eval/: __init__.py  eval_disc.py  filename_verification.py
roadmaps/adamsmap_eval/test/: eval_disc_test.py
roadmaps/adamsmap_stage/: CMakeLists.txt  package.xml
roadmaps/adamsmap_stage/launch/: adamsmap_stage.launch
roadmaps/adamsmap_stage/src/: tf_publisher.py
roadmaps/adamsmap_stage/world/: demo.world  demo_4agents.world  demo_6agents.world  demo_8agents.world  demo_x_8agents.world  demo_z_8agents.world
roadmaps/cvd/: CMakeLists.txt  README.md  demo.py
roadmaps/cvd/src/: cvd.cpp
roadmaps/cvt/: CMakeLists.txt  README.md  demo.py
roadmaps/cvt/src/: cvt.cpp
roadmaps/gsorm/: CMakeLists.txt  README.md
roadmaps/gsorm/src/: gsorm.cpp
roadmaps/odrm/: CMakeLists.txt  package.xml  setup.py
roadmaps/odrm/odrm/: README.md  requirements.txt  setup.py
roadmaps/odrm/odrm/test/: odrm_test.py
roadmaps/odrm/odrm_eval/: setup.py
roadmaps/odrm/odrm_eval/maps/: .~lock.rooms2.odg#  b.xcf  dense.xcf  dense34.xcf  plain.odg  rooms.odg  rooms2.odg  slam.xcf
roadmaps/odrm/odrm_eval/res/: x_200_4096.graph_adjlist.csv  x_500_4096.graph_adjlist.csv  x_500_4096.graph_pos.csv  z_200_4096.eval_cen.ECBS_ONLY.pkl2
roadmaps/odrm/odrm_gazebo/: CMakeLists.txt
roadmaps/odrm/odrm_global_planner/: CMakeLists.txt  bgp_plugin.xml
roadmaps/odrm/odrm_graph/: CMakeLists.txt  requirements.txt
roadmaps/odrm/odrm_nav/: package.xml
roadmaps/odrm/test/: odrm_test.py
roadmaps/odrm_gazebo/: package.xml
roadmaps/odrm_gazebo/src/: publish_robot_pose.py
roadmaps/odrm_graph/: package.xml  requirements.txt
roadmaps/odrm_graph/cache/: 8807200478445439499_100_1024.pkl
roadmaps/odrm_graph/launch/: roadmap_server.launch
roadmaps/odrm_graph/src/: roadmap_server.py
roadmaps/ompl/: CMakeLists.txt  lodepng
roadmaps/ompl/src/: omplpy.cpp
roadmaps/ompl/test/: test_ompl.py
(+1666 files in other folders)
