<?xml version="1.0"?>
<package>
  <name>logistics_relay</name>
  <version>0.1.0</version>
  <description>The logistics_relay package</description>
  <maintainer email="christian.henkel@ipa.fraunhofer.de">Christian Henkel</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/logistics_relay</url>
  <author email="christian.henkel@ipa.fraunhofer.de">Christian Henkel</author>
  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  
  <run_depend>rospy</run_depend>

</package>
