<?xml version="1.0"?>
<package format="2">
  <name>odrm_graph</name>
  <version>0.0.0</version>
  <description>Generating a roadmap graph for your global costmap</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="post@henkelchristian.de">Christian Henkel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>odrm</build_depend>
  <build_depend>graph_msgs</build_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>cython</build_export_depend>
  <build_export_depend>graph_msgs</build_export_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>cython</exec_depend>
  <exec_depend>graph_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
